--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -25,8 +25,8 @@ li{
 }
 
 .more{
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 20%;
+    padding-bottom: 20%;
     text-align: center;
 }
 
@@ -59,4 +59,9 @@ nav{
     display: flex;
     justify-content: center;
     margin:0 auto;
+}
+
+img{
+    width: 30px;
+    height: 30px;
 }
