--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,6 @@
     color: #ffffff;
     line-height: 1em;
     transition: .3s;
-
     border: 2px solid #54a4ff;
 }
 
@@ -18,7 +17,6 @@
     color: #1a85ff;
     background: #ffffff;
 }
-
 
 /* 検索ボックス（コピペ） */
 .search-form-4 {
@@ -62,7 +60,6 @@
     content: '';
 }
 
-
 /* 横スクロール */
 .Container {
     position: relative;
@@ -79,11 +76,67 @@
 
 .Box {
     flex-shrink: 0;
-    width: 300px;
-    height: 200px;
+    width: 250px;
+    height: 350px;
     margin-right: 10px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
+.image-container {
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+}
+
+.img-thumbnail {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 5px 5px;
+}
+
+.text-container {
+    padding: 10px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.text-container h2, .text-container p {
+    margin: 0;
+    padding: 0;
+}
+
+.text-container p {
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.text-container a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.user-icon {
+    margin-top: 10px;
+}
+
+
+
+.user-icon img {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
 }
 
 .Arrow {
@@ -115,17 +168,10 @@
 
 .box-container {
     display: flex;
-
     margin: 20px;
 }
 
-
-
-
-
-
 /* サイドバー */
-
 
 body {
     min-height: 100vh;
@@ -144,18 +190,4 @@ main {
 
 .dropdown-toggle {
     outline: 0;
-}
-
-h2{
-    font-weight: bold;
-}
-.user-icon {
-
-    margin-bottom: 20px;
-}
-
-.user-icon img {
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
 }
