--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -81,6 +81,8 @@ a {
     color: #0000ff;
     text-decoration: none;
     display: block;
+    font-size: large;
+    font-weight:bold
 }
 
 a:hover {
